# r2v

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: app.hpp  connections.hpp  data_source.hpp  entity.hpp  parser.hpp  point2.hpp
src/: main.cpp
tests/: CMakeLists.txt  unit_tests.cpp
